# masterblaster-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPECIFICATION.md
.cargo/: config.toml
crates/mb-audio/: Cargo.toml
crates/mb-audio/src/: cpal_backend.rs  lib.rs  traits.rs
crates/mb-engine/: Cargo.toml
crates/mb-engine/benches/: engine_bench.rs
crates/mb-engine/src/: channel.rs  clip_source.rs  envelope_state.rs  event_queue.rs  event_source.rs  frame.rs  frequency.rs  graph_state.rs  lib.rs  machine.rs  mixer.rs  scheduler.rs  voice.rs  voice_pool.rs
crates/mb-engine/src/machines/: amiga_filter.rs  mod.rs  passthrough.rs  tracker.rs
crates/mb-formats/: Cargo.toml
crates/mb-formats/src/: bmx_format.rs  effect_parser.rs  lib.rs  mod_format.rs  wav_format.rs
crates/mb-formats/tests/: mod_fixtures.rs
crates/mb-ir/: Cargo.toml
crates/mb-ir/src/: analysis.rs  audio_buffer.rs  audio_traits.rs  edit.rs  effects.rs  event.rs  graph.rs  instrument.rs  lib.rs  mod_envelope.rs  modulator.rs  musical_time.rs  pattern.rs  sample.rs  song.rs  timestamp.rs
crates/mb-master/: Cargo.toml
crates/mb-master/src/: lib.rs
designs/: 001-machine-architecture.md  002-pattern-and-sequence-enhancements.md  003-sequencing-model.md  004-timing-model.md  005-faust-integration.md  006-edit-command-system.md  007-modulator-system.md  008-buzz-tracker-machines.md  009-instrument-envelopes.md  011-stable-ids-and-alloc-free-render.md  013-voice-pool-architecture.md  015-playback-position-tracking.md  016-bmx-gui-multi-machine.md  017-bmx-scheduling-and-diagnostics.md  018-audio-hot-path-optimizations.md  019-sample-playback-lifetime.md  020-gui-performance.md  021-configurable-ui-theming.md  022-octatrack-playback.md  audio-buffer-architecture.md  buzz-tracker-machines.md  edit_command_system.md  faust-integration.md  instrument-envelopes.md  machine-architecture.md  modulator-system.md  pattern-and-sequence-enhancements.md  playback-position-tracking.md  rough-notes.md  rough_notes.md  sequencing-model.md  stable-ids-and-alloc-free-render.md  timing-model.md  track-coalescing.md  voice-pool-architecture.md
designs/completed/: 012-audio-buffer-architecture.md  014-track-coalescing.md  016-bmx-gui-multi-machine.md  017-bmx-scheduling-and-diagnostics.md  020-gui-performance.md
designs/proposed/: audio-hot-path-optimizations.md  sample-playback-lifetime.md
examples/: play_mod.rs
src/: app.rs  lib.rs  main.rs
src/ui/: cell_format.rs  colors.rs  editor_state.rs  graph.rs  input.rs  mod.rs  pattern_editor.rs  patterns.rs  samples.rs  sequencer.rs  transport.rs  undo.rs
tests/: alloc_free.rs  bmx_fixtures.rs  gui_tests.rs  mod_playback.rs  snapshot_tests.rs
tests/fixtures/: ACKNOWLEDGEMENTS.md
tests/fixtures/bmx/: acousticelectro-drumloop-100.bmx  tribal-60.bmx
tests/fixtures/mod/: kawaik1.mod  noise_synth_pop.mod
