[workspace]
resolver = "2"
members = [
    "crates/mb-ir",
    "crates/mb-engine",
    "crates/mb-audio",
    "crates/mb-formats",
    "crates/mb-master",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["elh"]

[workspace.dependencies]
# Internal crates
mb-ir = { path = "crates/mb-ir" }
mb-engine = { path = "crates/mb-engine" }
mb-audio = { path = "crates/mb-audio" }
mb-formats = { path = "crates/mb-formats" }
mb-master = { path = "crates/mb-master" }

# Core (no_std compatible)
arrayvec = "0.7"
heapless = "0.8"
libm = "0.2"

# Desktop audio
cpal = "0.15"
ringbuf = "0.4"

# Format parsing
binrw = "0.14"

# GUI
imgui = { version = "0.12", features = ["tables-api"] }
imgui-winit-support = "0.13"
imgui-glow-renderer = "0.13"
winit = "0.30"
glow = "0.14"
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"
rfd = "0.15"

[package]
name = "masterblaster"
version.workspace = true
edition.workspace = true

[dependencies]
mb-ir = { workspace = true }
mb-master = { workspace = true }
imgui = { workspace = true }
imgui-winit-support = { workspace = true }
imgui-glow-renderer = { workspace = true }
winit = { workspace = true }
glow = { workspace = true }
glutin = { workspace = true }
glutin-winit = { workspace = true }
raw-window-handle = { workspace = true }
rfd = { workspace = true }

[[bin]]
name = "mb-cli"
path = "src/bin/cli.rs"

[features]
test-harness = ["png"]
alloc_check = ["mb-engine/alloc_check"]

[[test]]
name = "gui_tests"
harness = false
required-features = ["test-harness"]

[dev-dependencies]
mb-engine = { workspace = true }
mb-formats = { workspace = true }
assert_no_alloc = "1.1"

[dependencies.png]
version = "0.17"
optional = true
