[package]
name = "mb-engine"
version.workspace = true
edition.workspace = true
description = "Playback engine for masterblaster tracker"

[features]
default = ["std"]
std = ["mb-ir/std"]
alloc_check = ["dep:assert_no_alloc"]

[dependencies]
mb-ir = { workspace = true }
heapless = { workspace = true }
slotmap = { workspace = true }
assert_no_alloc = { version = "1.1", optional = true }
