[package]
name = "mb-master"
version.workspace = true
edition.workspace = true
description = "Headless controller for masterblaster tracker"

[features]
alloc_check = ["mb-engine/alloc_check", "dep:assert_no_alloc"]

[dependencies]
mb-ir = { workspace = true }
mb-engine = { workspace = true }
mb-audio = { workspace = true }
mb-formats = { workspace = true }
ringbuf = { workspace = true }
assert_no_alloc = { version = "1.1", optional = true }
